# Tardi

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig  sdkconfig.esp32one
boards/: esp32one.json
components/blockchain/: CMakeLists.txt  component.mk
components/blockchain/submodule-fixes/: README.md
components/blockchain/submodule-fixes/seedtool-cli/src/: argp.c  argp.h  cbor-utils.hpp  format-bip39.cpp  format-bytewords-minimal.cpp  format-bytewords-uri.cpp  format-bytewords.cpp  format-sskr.cpp  format-sskr.hpp  hkdf.c  incl_test.h  params.cpp  params.hpp  random.cpp  randombytes.c  utils.cpp
components/config/: CMakeLists.txt  Kconfig
include/: Button.h  ButtonsWindow.h  Camera.h  CodeScanner.h  Controller.h  Debouncer.h  DisplayQRWindow.h  EncoderEmulator.h  GUI.h  GpioKey.h  KeyBinder.h  ListRotatorWindow.h  MessageWindow.h  NavButtons.h  ScanQRWindow.h  SimpleButtonsWindow.h  Window.h  main.h  qrcodegen.h
main/: Button.cpp  ButtonsWindow.cpp  CMakeLists.txt  Camera.cpp  CodeScanner.cpp  Controller.cpp  DisplayQRWindow.cpp  EncoderEmulator.cpp  GUI.cpp  GpioKey.cpp  ListRotatorWindow.cpp  NavButtons.cpp  ScanQRWindow.cpp  SimpleButtonsWindow.cpp  Window.cpp  main.cpp  qrcodegen.c
main/examples/: examples.cpp  examples.h
main/examples/bc-crypto-base/: test.c  test.h
